Fixed the problem with the stacking context by setting the nav class in flaunt.js to z-index of 100.

--- a/css/grid.css
+++ b/css/grid.css
@@ -213,8 +213,9 @@
 }
 
 .tooltip {
-    /*position: relative;*/
+    position: relative;
     display: inline-block;
+		zindex:auto;
 }
 
 .tooltip .tooltiptext {
@@ -228,13 +229,13 @@
 		margin-left:3em;
 		margin-bottom:3em;
     
-    /*
+    
 		position: absolute;
-    z-index: 1;
+    z-index: auto;
     top: 50%;
     left: 50%;
     margin-left: -66px;
-		*/
+		
 }
 
 .tooltip:hover .tooltiptext {
